# lspresso-shot

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  nvim_dbg.diff  tmp.lua
.github/workflows/: build_lint_test.yml
lspresso-shot/: Cargo.toml  init_dot_lua.rs  lib.rs  test.rs  types.rs
lspresso-shot/lua_templates/: attach.lua  code_action_action.lua  code_action_resolve_action.lua  code_lens_action.lua  code_lens_resolve_action.lua  completion_action.lua  completion_resolve_action.lua  declaration_action.lua  definition_action.lua  diagnostic_action.lua  diagnostic_autocmd.lua  document_highlight_action.lua  document_link_action.lua  document_link_resolve_action.lua  document_symbol.lua  document_symbol_action.lua  folding_range_action.lua  formatting_action.lua  helpers.lua  hover_action.lua  implementation_action.lua  incoming_calls_action.lua  inlay_hint_action.lua  moniker_action.lua  outgoing_calls_action.lua  prepare_call_hierarchy_action.lua  prepare_type_hierarchy_action.lua  references_action.lua  rename_action.lua  request_action.lua  selection_range_action.lua  semantic_tokens_full_action.lua  semantic_tokens_full_delta_action.lua  semantic_tokens_range_action.lua  signature_help_action.lua  state_or_response_action.lua  type_definition_action.lua  workspace_diagnostic_action.lua
lspresso-shot/types/: call_hierarchy.rs  code_action.rs  code_lens.rs  color_presentation.rs  compare.rs  completion.rs  declaration.rs  definition.rs  diagnostic.rs  document_color.rs  document_highlight.rs  document_link.rs  document_symbol.rs  folding_range.rs  formatting.rs  hover.rs  implementation.rs  inlay_hint.rs  linked_editing_range.rs  mod.rs  moniker.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  type_definition.rs  type_hierarchy.rs  workspace_symbol.rs
src/: init_dot_lua.rs  lib.rs  main.rs  test.rs  types.rs
src/lua_templates/: .luarc.json  attach.lua  completion_action.lua  definition_action.lua  diagnostic_autocmd.lua  formatting_action.lua  helpers.lua  hover_action.lua  init.lua  references_action.lua  rename_action.lua
test-server/: Cargo.toml  README.md
test-server/src/: handle.rs  lib.rs  main.rs  responses.rs
test-suite/: Cargo.toml
test-suite/src/: code_action.rs  code_lens.rs  code_lens_resolve.rs  color_presentation.rs  completion.rs  completion_resolve.rs  declaration.rs  definition.rs  diagnostics.rs  document_color.rs  document_highlight.rs  document_link.rs  document_link_resolve.rs  document_symbol.rs  execute_command.rs  folding_range.rs  formatting.rs  hover.rs  implementation.rs  incoming_calls.rs  inlay_hint.rs  lib.rs  linked_editing_range.rs  moniker.rs  outgoing_calls.rs  prepare_call_hierarchy.rs  prepare_type_hierarchy.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens_full.rs  semantic_tokens_full_delta.rs  semantic_tokens_range.rs  signature_help.rs  test_helpers.rs  type_definition.rs  type_hierarchy.rs  workspace_files.rs  workspace_symbol.rs
