[package]
name = "lspresso-shot"
version = "0.1.0"
edition = "2021"
description = "Integration testing library for language servers#"
readme = "README.md"
keywords = ["language-server", "lsp", "tooling", "testing"]
categories = ["development-tools"]
repository = "https://github.com/WillLillis/lspresso-shot"
license = "MIT"

[dependencies]
anstyle = "1.0.10"
anyhow = "1.0.95"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.19"
