[package]
name = "lspresso-shot"
version = "0.1.0"
edition = "2021"
description = "Integration testing library for language servers#"
readme = "README.md"
keywords = ["language-server", "lsp", "tooling", "testing"]
categories = ["development-tools"]
repository = "https://github.com/WillLillis/lspresso-shot"
license = "MIT"

[dependencies]
anstyle = "1.0.10"
lsp-types = "0.97.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
toml = "0.8.19"
