[workspace]
resolver = "2"
members = ["lspresso-shot", "test-server"]
default-members = ["lspresso-shot"]

[workspace.package]
version = "0.1.0"
authors = ["Will Lillis <will.lillis24@gmail.com>"]
edition = "2021"
description = "Integration testing library for language servers"
documentation = "https://docs.rs/lspresso-shot/latest/lspresso_shot/"
readme = "README.md"
homepage = "https://github.com/WillLillis/lspresso-shot"
keywords = ["language-server", "lsp", "tooling", "testing"]
categories = ["development-tools"]
repository = "https://github.com/WillLillis/lspresso-shot"
license = "MIT"

[workspace.dependencies]
anstyle = "1.0.10"
lsp-types = "0.97.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"
items_after_statements = "allow"
redundant_closure_for_method_calls = "allow"
module_name_repetitions = "allow"
# Using the URI type as a key is unavoidable because of lsp-types, tell clippy everything's gonna be ok
mutable_key_type = "allow"
